--- a/packages/neon-components/package.json
+++ b/packages/neon-components/package.json
@@ -14,7 +14,9 @@
     "url": "git+https://github.com/diliburong/neon.git"
   },
   "scripts": {
+    "analyze": "lit-analyzer './src/**/*.ts'",
     "storybook": "wds -c .storybook/server.mjs",
+    "lint": "eslint \"**/*.{js,ts}\" --config .eslintrc  --cache",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
@@ -24,7 +26,16 @@
   "devDependencies": {
     "@open-wc/dedupe-mixin": "^1.3.0",
     "@open-wc/testing": "^2.5.33",
-    "@web/dev-server-storybook": "^0.3.7"
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "@web/dev-server-storybook": "^0.3.7",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-lit": "^1.5.1",
+    "eslint-plugin-node": "^11.1.0",
+    "lit-analyzer": "^1.2.1",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "@storybook/web-components": "^6.3.7",
