--- a/packages/neon-components/package.json
+++ b/packages/neon-components/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "analyze": "lit-analyzer './src/**/*.ts'",
+    "analyze:wca": "wca wca analyze './src/**/*.ts' --outFile custom-elements.json --format json",
     "storybook": "wds -c .storybook/server.mjs",
     "lint": "eslint \"**/*.{js,ts}\" --config .eslintrc  --cache",
     "test": "echo \"Error: run tests from root\" && exit 1"
@@ -26,8 +27,10 @@
   "devDependencies": {
     "@open-wc/dedupe-mixin": "^1.3.0",
     "@open-wc/testing": "^2.5.33",
+    "@rollup/plugin-json": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
+    "@web/dev-server-rollup": "^0.3.9",
     "@web/dev-server-storybook": "^0.3.7",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
@@ -35,7 +38,8 @@
     "eslint-plugin-lit": "^1.5.1",
     "eslint-plugin-node": "^11.1.0",
     "lit-analyzer": "^1.2.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "web-component-analyzer": "^1.1.6"
   },
   "dependencies": {
     "@storybook/web-components": "^6.3.7",
