add icon element

--- a/packages/neon-components/.eslintrc
+++ b/packages/neon-components/.eslintrc
@@ -39,8 +39,7 @@
             2,
             {
                 "capIsNewExceptions": [
-                    "ApolloClientMixin",
-                    "EaMixin"
+                    "LogMixin"
                 ]
             }
         ],
