--- a/packages/neon-components/package.json
+++ b/packages/neon-components/package.json
@@ -18,20 +18,25 @@
     "analyze:wca": "wca wca analyze './src/**/*.ts' --outFile custom-elements.json --format json",
     "storybook": "wds -c .storybook/server.mjs",
     "lint": "eslint \"**/*.{js,ts}\" --config .eslintrc  --cache",
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "echo \"Error: run tests from root\" && exit 1",
+    "storybook:webpack": "start-storybook -p 6006"
   },
   "bugs": {
     "url": "https://github.com/diliburong/neon/issues"
   },
   "homepage": "https://github.com/diliburong/neon#readme",
   "devDependencies": {
+    "@babel/core": "^7.15.0",
     "@open-wc/dedupe-mixin": "^1.3.0",
     "@open-wc/testing": "^2.5.33",
     "@rollup/plugin-json": "^4.1.0",
+    "@storybook/addon-controls": "^6.3.7",
+    "@storybook/addon-essentials": "^6.3.7",
+    "@storybook/addon-links": "^6.3.7",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "@web/dev-server-rollup": "^0.3.9",
-    "@web/dev-server-storybook": "^0.3.7",
+    "@web/dev-server-storybook": "^0.3.8",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.0",
@@ -42,7 +47,7 @@
     "web-component-analyzer": "^1.1.6"
   },
   "dependencies": {
-    "@storybook/web-components": "^6.3.7",
+    "@storybook/web-components": "^6.4.0-alpha.32",
     "lit": "^2.0.0-rc.2"
   }
 }
