--- a/packages/neon-components/package.json
+++ b/packages/neon-components/package.json
@@ -17,9 +17,11 @@
     "analyze": "lit-analyzer './src/**/*.ts'",
     "analyze:wca": "wca wca analyze './src/**/*.ts' --outFile custom-elements.json --format json",
     "storybook": "wds -c .storybook/server.mjs",
-    "lint": "eslint \"**/*.{js,ts}\" --config .eslintrc  --cache",
+    "lint": "yarn eslint && yarn stylelint",
+    "eslint": "eslint \"**/*.{js,ts}\" --config .eslintrc  --cache",
     "test": "echo \"Error: run tests from root\" && exit 1",
-    "storybook:webpack": "start-storybook -p 6006"
+    "storybook:webpack": "start-storybook -p 6006",
+    "stylelint": "stylelint \"**/*.{js,ts}\" --cache"
   },
   "bugs": {
     "url": "https://github.com/diliburong/neon/issues"
@@ -43,6 +45,11 @@
     "eslint-plugin-lit": "^1.5.1",
     "eslint-plugin-node": "^11.1.0",
     "lit-analyzer": "^1.2.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-order": "^4.1.0",
+    "stylelint-processor-styled-components": "^1.10.0",
     "typescript": "^4.3.5",
     "web-component-analyzer": "^1.1.6"
   },
