--- a/packages/neon-components/package.json
+++ b/packages/neon-components/package.json
@@ -32,6 +32,7 @@
     "@open-wc/dedupe-mixin": "^1.3.0",
     "@open-wc/testing": "^2.5.33",
     "@rollup/plugin-json": "^4.1.0",
+    "@storybook/addon-actions": "^6.3.7",
     "@storybook/addon-controls": "^6.3.7",
     "@storybook/addon-essentials": "^6.3.7",
     "@storybook/addon-links": "^6.3.7",
@@ -39,6 +40,7 @@
     "@typescript-eslint/parser": "^4.29.2",
     "@web/dev-server-rollup": "^0.3.9",
     "@web/dev-server-storybook": "^0.3.8",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.0",
