--- a/packages/neon-components/tsconfig.json
+++ b/packages/neon-components/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "lib",
+    "declarationDir":"dist/dts",
+    "outDir": "dist/esm",
   },
   "include": ["src/**/*"]
 }
